--- a/templates/bookseats2.html
+++ b/templates/bookseats2.html
@@ -6,6 +6,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
+<!-- Select your favourite seats and book your ticket here! -->
 <html>
 <head>
 <title>LCP- Book Seats</title>
@@ -23,88 +24,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="static/js/bookseats_js/jquery.seat-charts.js"></script>
 </head>
 <body>
-	<script type="text/javascript">
-		var price = 150; //price
-		$(document).ready(function() {
-			var $cart = $('#selected-seats'), //Sitting Area
-					$counter = $('#counter'), //Votes
-					$total = $('#total'); //Total money
-
-			var sc = $('#seat-map').seatCharts({
-				map: [  //Seating chart
-					'aaaaaaaaaa',
-					'aaaaaaaaaa',
-					'__________',
-					'aaaaaaaaaa',
-					'aaaaaaaaaa',
-					'aaaaaaaaaa',
-					'aaaaaaaaaa',
-					'aaaaaaaaaa',
-					'aaaaaaaaaa',
-					'aaaaaaaaaa'
-				],
-				naming : {
-					top : false,
-					getLabel : function (character, row, column) {
-						return column;
-					}
-				},
-				legend : { //Definition legend
-					node : $('#legend'),
-					items : [
-						[ 'a', 'available',   'Available' ],
-						[ 'a', 'unavailable', 'Sold'],
-						[ 'a', 'selected', 'Selected']
-					]
-				},
-				click: function () { //Click event
-					if (this.status() == 'available') { //optional seat
-						$('<li>Row'+(this.settings.row+1)+' Seat'+this.settings.label+'</li>')
-							.attr('id', 'cart-item-'+this.settings.id)
-							.data('seatId', this.settings.id)
-							.appendTo($cart);
-
-						$counter.text(sc.find('selected').length+1);
-						$("seat").val(counter);
-						$total.text(recalculateTotal(sc)+price);
-
-						return 'selected';
-					} else if (this.status() == 'selected') { //Checked
-							//Update Number
-							$counter.text(sc.find('selected').length-1);
-							$("seat").val(counter);
-							//update totalnum
-							$total.text(recalculateTotal(sc)-price);
-
-							//Delete reservation
-							$('#cart-item-'+this.settings.id).remove();
-							//optional
-							return 'available';
-					} else if (this.status() == 'unavailable') { //sold
-						$("seat").val(counter);
-						return 'unavailable';
-					} else {
-						return this.style();
-					}
-
-				//	$("#seat").val(counter);
-
-				}
-			});
-			//sold seat
-			//sc.get(['1_2', '4_4','4_5','6_6','6_7','8_5','8_6','8_7','8_8', '10_1', '10_2']).status('unavailable');
-
-		});
-		//sum total money
-		function recalculateTotal(sc) {
-			var total = 0;
-			sc.find('selected').each(function () {
-				total += price;
-			});
-			document.getElementById('price')
-			return total;
-		}
-	</script>
 <div class="content">
 	<h1>Book Your Seats</h1>
 	<div class="main">
@@ -114,37 +33,114 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="front">SCREEN</div>
 			</div>
 			<div class="booking-details">
+				<form action="/ticketconfirm" method="POST">
+				<ul class="book-left">
+					<li>Movie </li>
+					<li>Theatre </li>
+					<li>Show </li>
+					<li>No. of Seats</li>
+					<li>Total</li>
+					<li>Seats :</li>
+				</ul>
+				<ul class="book-right">
+					<li>: {{movie}}</li>
+					<li>: {{theatre}}</li>
+					<li>: {{show}}</li>
+					<input  type="hidden" name="cities" value="{{city}}">
+					<input  type="hidden" name="movies_list" value="{{movie}}">
+					<input  type="hidden" name="theatres_list" value="{{theatre}}">
+					<input  type="hidden" name="shows" value="{{show}}">
+					<li>: <span id="counter">0</span></li>
+					<li>: <b><i>Rs.</i><span id="total">0</span></b></li>
+				</ul>
+				<div class="clear"></div>
+				<ul id="selected-seats" class="scrollbar scrollbar1"></ul>
+					
 
-
-						<ul class="book-left">
-							<li>Movie </li>
-							<li>Theatre </li>
-							<li>Show </li>
-							<li>No. of Seats</li>
-							<li>Total</li>
-							<li>Seats :</li>
-						</ul>
-
-						<ul class="book-right">
-							<li>: {{movie}}</li>
-							<li>: {{city}}</li>
-							<li>: {{theatre}}</li>
-							<li>: {{show}}</li>
-							<li>: <span id="counter">0</span></li>
-							<li>: <b><i>Rs.</i><span id="total">0</span></b></li>
-						</ul>
-						<div class="clear"></div>
-						<ul id="selected-seats" class="scrollbar scrollbar1"></ul>
-
-
-					<button class="btn btn-default" >Book Now</button>
-
+				<input type="submit" class="checkout-button">Book Now</button>
+				</form>
 				<div id="legend"></div>
 			</div>
 			<div style="clear:both"></div>
 	    </div>
 
+			<script type="text/javascript">
+				var price = 150; //price
+				$(document).ready(function() {
+					var $cart = $('#selected-seats'), //Sitting Area
+					$counter = $('#counter'), //Votes
+					$total = $('#total'); //Total money
 
+					var sc = $('#seat-map').seatCharts({
+						map: [  //Seating chart
+							'aaaaaaaaaa',
+							'aaaaaaaaaa',
+							'__________',
+							'aaaaaaaaaa',
+							'aaaaaaaaaa',
+							'aaaaaaaaaa',
+							'aaaaaaaaaa',
+							'aaaaaaaaaa',
+							'aaaaaaaaaa',
+							'aaaaaaaaaa'
+						],
+						naming : {
+							top : false,
+							getLabel : function (character, row, column) {
+								return column;
+							}
+						},
+						legend : { //Definition legend
+							node : $('#legend'),
+							items : [
+								[ 'a', 'available',   'Available' ],
+								[ 'a', 'unavailable', 'Sold'],
+								[ 'a', 'selected', 'Selected']
+							]
+						},
+						click: function () { //Click event
+							if (this.status() == 'available') { //optional seat
+								$('<li>Row'+(this.settings.row+1)+' Seat'+this.settings.label+'</li>')
+									.attr('id', 'cart-item-'+this.settings.id)
+									.data('seatId', this.settings.id)
+									.appendTo($cart);
+
+								$counter.text(sc.find('selected').length+1);
+								$total.text(recalculateTotal(sc)+price);
+
+								return 'selected';
+							} else if (this.status() == 'selected') { //Checked
+									//Update Number
+									$counter.text(sc.find('selected').length-1);
+									//update totalnum
+									$total.text(recalculateTotal(sc)-price);
+
+									//Delete reservation
+									$('#cart-item-'+this.settings.id).remove();
+									//optional
+									return 'available';
+							} else if (this.status() == 'unavailable') { //sold
+								return 'unavailable';
+							} else {
+								return this.style();
+							}
+						}
+
+					});
+					//sold seat
+					//sc.get(['1_2', '4_4','4_5','6_6','6_7','8_5','8_6','8_7','8_8', '10_1', '10_2']).status('unavailable');
+
+				});
+				//sum total money
+				function recalculateTotal(sc) {
+					var total = 0;
+					sc.find('selected').each(function () {
+						total += price;
+					});
+
+					return total;
+				}
+			</script>
 	</div>
 	</div>
 <script src="static/js/bookseats_js/jquery.nicescroll.js"></script>
