--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -15,8 +15,8 @@
 </head>
 <body style=" background-image: url('static/images/cover.png'); background-repeat: no-repeat; background-position: center; background-attachment: fixed; background-size: 110% 130%; font-family: 'Raleway';font-size: 22px;" >
 	<header role="banner"  style="background-color:rgba(0,0,0,0.6)">
-        <div id="cd-logo"><a href="#"><img src="{{ url_for('static', filename = 'images/logo.png') }}" alt="Logo" width="60px" height="60px" style="border-radius:50%; margin-left: 650px;"></a>
-        <div style="margin-top:-40px; margin-left:730px;">
+        <div id="cd-logo"><a href="#"><img src="{{ url_for('static', filename = 'images/logo.png') }}" alt="Logo" width="60px" height="60px" style="border-radius:50%;margin-top: -10px;margin-left: -50px"></a>
+        <div style="margin-top:-40px; margin-left:20px">
            <font size="5.5" color="white" ><b>Lights Camera Popcorn</b></font>
         </div>
         </div>
