--- a/templates/login2.html
+++ b/templates/login2.html
@@ -3,6 +3,7 @@
 <p>You're logged in already!</p>
 {% else %}
 <!DOCTYPE html>
+<!-- Login to the Lights Camera Popcorn Application -->
 <html lang="en">
 <head>
 	<title>Lights Camera Popcorn</title>
@@ -27,6 +28,7 @@
 <!--===============================================================================================-->
 </head>
 <body>
+	
 	
 	<div class="limiter">
 		<div class="container-login100">
@@ -74,7 +76,7 @@
 						<br>
 						<br>
 						<br>
-						<a class="txt2" href="#">
+						<a class="txt2" href="/">
 						A project by Group 2 - Python <br>
 						{NECTI GAKKOU }
 						</a>	
