--- a/templates/signup2.html
+++ b/templates/signup2.html
@@ -3,6 +3,7 @@
 <p>You're logged in already!</p>
 {% else %}
 <!DOCTYPE html>
+<!-- Register for the Lights Camera Popcorn Application! -->
 <html lang="en">
 <head>
 	<title>Lights Camera Popcorn</title>
@@ -56,6 +57,13 @@
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
+					<div class="wrap-input100 validate-input" data-validate = "Valid Phone number required: 10 digit no.">
+						<input class="input100" type="text" name="phno" placeholder="Phone Number" pattern = "[7-9]{1}[0-9]{9}">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</span>
+					</div>
 					
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn" type="submit">
@@ -66,7 +74,7 @@
 						<span class="txt1">
 							Already Registered?
 						</span>
-						<a class="txt2" href="/#">
+						<a class="txt2" href="/home">
 							Login here!
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
